Fixed Issue Causing Uneven Selling Point Image Size

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,10 @@ p {
   background-repeat: no-repeat;
 }
 
+.thin-heading {
+	font-weight: 300;
+}
+
 .test {
   position: fixed;
 }
